# automate_job_search

./: .gitignore  credentials.json  main.py  pyproject.toml
.github/workflows/: daily_hunt.yml
